CSCore Linux initial

--- a/CSCore/CSCore.csproj
+++ b/CSCore/CSCore.csproj
@@ -22,7 +22,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;FLAC_DEBUG</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;WINDOWS FLAC_DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -36,7 +36,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;WINDOWS</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -287,7 +287,6 @@
     <Compile Include="DMO\SetTypeFlags.cs" />
     <Compile Include="DSP\BiQuad.cs" />
     <Compile Include="DSP\ChannelMatrixElement.cs" />
-    <None Include="DSP\EqualizerBiQuadFilter.cs" />
     <Compile Include="DSP\FastFourierTransformation.cs" />
     <Compile Include="DSP\FftProvider.cs" />
     <Compile Include="DSP\FftMode.cs" />
