--- a/CSCore.Ffmpeg/CSCore.Ffmpeg.csproj
+++ b/CSCore.Ffmpeg/CSCore.Ffmpeg.csproj
@@ -42,6 +42,7 @@
     <Compile Include="AVCodecID.cs" />
     <Compile Include="FfmpegDecoder.cs" />
     <Compile Include="FfmpegException.cs" />
+    <Compile Include="FfmpegStream.cs" />
     <Compile Include="InteropCalls.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -52,6 +53,21 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="avcodec-57.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="avdevice-57.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="avfilter-6.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="avformat-57.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="avutil-55.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="ffmpeg\3.0.2\licenses\bzip2.txt" />
     <Content Include="ffmpeg\3.0.2\licenses\fontconfig.txt" />
     <Content Include="ffmpeg\3.0.2\licenses\freetype.txt" />
@@ -107,6 +123,15 @@
     <Content Include="ffmpeg\3.0.2\x86\postproc-54.dll" />
     <Content Include="ffmpeg\3.0.2\x86\swresample-2.dll" />
     <Content Include="ffmpeg\3.0.2\x86\swscale-4.dll" />
+    <Content Include="postproc-54.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="swresample-2.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="swscale-4.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
