--- a/CSCore.Ffmpeg/CSCore.Ffmpeg.csproj
+++ b/CSCore.Ffmpeg/CSCore.Ffmpeg.csproj
@@ -53,21 +53,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="avcodec-57.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="avdevice-57.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="avfilter-6.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="avformat-57.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="avutil-55.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <Content Include="ffmpeg\3.0.2\licenses\bzip2.txt" />
     <Content Include="ffmpeg\3.0.2\licenses\fontconfig.txt" />
     <Content Include="ffmpeg\3.0.2\licenses\freetype.txt" />
@@ -107,29 +92,52 @@
     <Content Include="ffmpeg\3.0.2\licenses\xz.txt" />
     <Content Include="ffmpeg\3.0.2\licenses\zimg.txt" />
     <Content Include="ffmpeg\3.0.2\licenses\zlib.txt" />
-    <Content Include="ffmpeg\3.0.2\x64\avcodec-57.dll" />
-    <Content Include="ffmpeg\3.0.2\x64\avdevice-57.dll" />
-    <Content Include="ffmpeg\3.0.2\x64\avfilter-6.dll" />
-    <Content Include="ffmpeg\3.0.2\x64\avformat-57.dll" />
-    <Content Include="ffmpeg\3.0.2\x64\avutil-55.dll" />
-    <Content Include="ffmpeg\3.0.2\x64\postproc-54.dll" />
-    <Content Include="ffmpeg\3.0.2\x64\swresample-2.dll" />
-    <Content Include="ffmpeg\3.0.2\x64\swscale-4.dll" />
-    <Content Include="ffmpeg\3.0.2\x86\avcodec-57.dll" />
-    <Content Include="ffmpeg\3.0.2\x86\avdevice-57.dll" />
-    <Content Include="ffmpeg\3.0.2\x86\avfilter-6.dll" />
-    <Content Include="ffmpeg\3.0.2\x86\avformat-57.dll" />
-    <Content Include="ffmpeg\3.0.2\x86\avutil-55.dll" />
-    <Content Include="ffmpeg\3.0.2\x86\postproc-54.dll" />
-    <Content Include="ffmpeg\3.0.2\x86\swresample-2.dll" />
-    <Content Include="ffmpeg\3.0.2\x86\swscale-4.dll" />
-    <Content Include="postproc-54.dll">
+    <Content Include="ffmpeg\3.0.2\x64\avcodec-57.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="swresample-2.dll">
+    <Content Include="ffmpeg\3.0.2\x64\avdevice-57.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="swscale-4.dll">
+    <Content Include="ffmpeg\3.0.2\x64\avfilter-6.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="ffmpeg\3.0.2\x64\avformat-57.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="ffmpeg\3.0.2\x64\avutil-55.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="ffmpeg\3.0.2\x64\postproc-54.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="ffmpeg\3.0.2\x64\swresample-2.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="ffmpeg\3.0.2\x64\swscale-4.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="ffmpeg\3.0.2\x86\avcodec-57.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="ffmpeg\3.0.2\x86\avdevice-57.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="ffmpeg\3.0.2\x86\avfilter-6.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="ffmpeg\3.0.2\x86\avformat-57.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="ffmpeg\3.0.2\x86\avutil-55.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="ffmpeg\3.0.2\x86\postproc-54.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="ffmpeg\3.0.2\x86\swresample-2.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="ffmpeg\3.0.2\x86\swscale-4.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
