--- a/CSCore/CSCore.csproj
+++ b/CSCore/CSCore.csproj
@@ -329,6 +329,7 @@
     <Compile Include="SoundIn\WaveInDevice.cs" />
     <Compile Include="SoundOut\ALSoundOut.cs" />
     <Compile Include="SoundOut\AL\ALErrorCodes.cs" />
+    <Compile Include="SoundOut\AL\ALException.cs" />
     <Compile Include="SoundOut\DirectSoundOut.cs" />
     <Compile Include="SoundOut\MMInterop\Utils.cs" />
     <Compile Include="SoundOut\MMInterop\WaveCallback.cs" />
@@ -339,7 +340,6 @@
     <Compile Include="SoundOut\AL\ALDevice.cs" />
     <Compile Include="SoundOut\AL\ALFormat.cs" />
     <Compile Include="SoundOut\AL\ALInterops.cs" />
-    <Compile Include="SoundOut\AL\ALPlayback.cs" />
     <Compile Include="SoundOut\AL\ALSource.cs" />
     <Compile Include="SoundOut\AL\ALSourceParameters.cs" />
     <Compile Include="SoundOut\AL\ALSourceState.cs" />
