Removed unicode chars from postbuild script. #135

--- a/CSCore/CSCore.csproj
+++ b/CSCore/CSCore.csproj
@@ -620,43 +620,43 @@
       set cscli=$(SolutionDir)Tools\CSCli\bin\$(ConfigurationName)\CSCli.exe
 
       IF exist "%25sdk%25\." (
-      echo ✔ The Microsoft Windows SDK was found.
+      echo OK: The Microsoft Windows SDK was found.
       ) else (
-      echo ✘ The Microsoft Windows SDK Dir was not found. Check the following path: "%25sdk%25"
+      echo FAILED: The Microsoft Windows SDK Dir was not found. Check the following path: "%25sdk%25"
       goto EXIT_ERR
       )
       IF exist "%25framework%25\." (
-      echo ✔ The .NET Framework Dir was found.
+      echo OK: The .NET Framework Dir was found.
       ) else (
-      echo ✘ The Framework-Dir was not found. Check the following path: "%25framework%25"
+      echo FAILED: The Framework-Dir was not found. Check the following path: "%25framework%25"
       goto EXIT_ERR
       )
       IF exist "%25inlineILCompiler%25" (
-      echo ✔ Found the inline-il-compiler.
+      echo OK: Found the inline-il-compiler.
       ) else (
-      echo ✘ The inline-il-compiler was not found. Check the following path: "%25inlineILCompiler%25"
+      echo FAILED: The inline-il-compiler was not found. Check the following path: "%25inlineILCompiler%25"
       goto EXIT_ERR
       )
       IF exist "%25cscli%25" (
-      echo ✔ Found the cscli-compiler.
+      echo OK: Found the cscli-compiler.
       ) else (
-      echo ✘ The cscli was not found. Check the following path: "%25cscli%25"
+      echo FAILED: The cscli was not found. Check the following path: "%25cscli%25"
       goto EXIT_ERR
       )
 
       if $(ConfigurationName) == Debug (
       echo Build-Configuration: DEBUG
-      echo    ✔ DEBUG=IMPL
-      echo    ✘ OPTIMIZE
+      echo    DEBUG=IMPL
+      echo    NO OPTIMIZE
       set ilasm_args=/DLL /DEBUG=IMPL
       ) else (
       if $(ConfigurationName) == Release (
       echo Build-Configuration: RELEASE
-      echo    ✘ DEBUG
-      echo    ✔ OPTIMIZE
+      echo    NO DEBUG
+      echo    OPTIMIZE
       set ilasm_args=/DLL /OPTIMIZE
       ) else (
-      echo ✘ Invalid Configuration.
+      echo FAILED: Invalid Configuration.
       goto EXIT_ERR
       )
       )
