Only run CSCore postbuild if we're on Windows

--- a/CSCore/CSCore.csproj
+++ b/CSCore/CSCore.csproj
@@ -607,7 +607,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>
+    <PostBuildEvent Condition=" '$(OS)' == 'Windows_NT' ">
       @echo off &amp; setLocal EnableDELAYedeXpansion
       chcp 65001
 
